Sat Nov 20 17:26:21 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * tests/Abstract_Interface/client.cpp:
        * tests/Abstract_Interface/test.idl:
        * tests/Abstract_Interface/test_i.h:
        * tests/Abstract_Interface/test_i.cpp:
          Added test for extraction of null abstract interface.

Sat Nov 20 15:34:50 UTC 2010  Martin Corino  <corino_m@remedy.nl>

        * tao/Valuetype/AbstractBase.cpp:
          Fixed missing support for extraction of null object ref for
          abstract interface.

Fri Nov 19 19:12:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
          Changed generation of DDS_TYPE traits

Fri Nov 19 17:50:57 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:

          Fixed a bug in processing of pragma ID directive. Thanks to
          Wendsomde Yameogo <wendsomde at yameogo dot com> for
          reporting the problem.

Fri Nov 19 15:50:11 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3926_Regression/Client_ORBInitializer.h:
        * tests/Bug_3926_Regression/Client_Request_Interceptor.h:
          Fixed fuzz.

Fri Nov 19 13:29:57 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3926_Regression/client.cpp:
        * tests/Bug_3926_Regression/Client_ORBInitializer.cpp:
        * tests/Bug_3926_Regression/Client_Request_Interceptor.cpp:
        * tests/Bug_3926_Regression/test.idl:
        * tests/Bug_3926_Regression/server.cpp:
        * tests/Bug_3926_Regression/test_i.cpp:
        * tests/Bug_3926_Regression/Client_ORBInitializer.h:
        * tests/Bug_3926_Regression/Client_Request_Interceptor.h:
        * tests/Bug_3926_Regression/README:
        * tests/Bug_3926_Regression/run_test.pl:
        * tests/Bug_3926_Regression/test_i.h:
        * tests/Bug_3926_Regression/Bug_3926_Regression.mpc:
        * bin/tao_orb_tests.lst: